# grears

./: .editorconfig  .gitignore  Calculator.elm  CalculatorForm.elm  LICENSE  README.md  Results.elm  TopTypes.elm  Types.elm  grears.cabal  grears.css  grears.elm  main.elm
Calculator/: Form.elm  ResultsView.elm  State.elm  Types.elm  View.elm
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
tests/: GrearsTests.elm  elm-package.json
