name:                grears
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sgravrock/grears#readme
license:             MIT
license-file:        LICENSE
author:              Stephen Gravrock
maintainer:          sdg@panix.com
copyright:           2017 Author name here
category:            Application
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable grears-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , grears
  default-language:    Haskell2010

test-suite grears-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grears
                     , HUnit
                     , HUnit-approx
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgravrock/grears
